src/app/globals.css
@import "tailwindcss";
@import "@heroui/styles";

/* 
 * Accent: #74492A
 * Generated from: https://heroui.com/themes?chroma=0.07400421396058689&hue=55.342692450381584&lightness=0.4477603155199682&fontFamily=geist
 */

:root,
.light,
.default,
[data-theme="light"],
[data-theme="default"] {
  --accent: oklch(44.78% 0.074 55.34);
  --accent-foreground: oklch(99.11% 0 0);
  --background: oklch(97.02% 0.0015 55.34);
  --border: oklch(90% 0.0015 55.34);
  --danger: oklch(65.32% 0.2335 1.92);
  --danger-foreground: oklch(99.11% 0 0);
  --default: oklch(94% 0.0015 55.34);
  --default-foreground: oklch(21.03% 0.0059 55.34);
  --field-background: oklch(100% 0.0008 55.34);
  --field-foreground: oklch(21.03% 0.0015 55.34);
  --field-placeholder: oklch(55.17% 0.003 55.34);
  --focus: oklch(44.78% 0.074 55.34);
  --foreground: oklch(21.03% 0.0015 55.34);
  --muted: oklch(55.17% 0.003 55.34);
  --overlay: oklch(100% 0.0004 55.34);
  --overlay-foreground: oklch(21.03% 0.0015 55.34);
  --scrollbar: oklch(87.1% 0.0015 55.34);
  --segment: oklch(100% 0.0015 55.34);
  --segment-foreground: oklch(21.03% 0.0015 55.34);
  --separator: oklch(92% 0.0015 55.34);
  --success: oklch(73.29% 0.1941 126.99);
  --success-foreground: oklch(21.03% 0.0059 126.99);
  --surface: oklch(100% 0.0008 55.34);
  --surface-foreground: oklch(21.03% 0.0015 55.34);
  --surface-secondary: oklch(95.24% 0.0012 55.34);
  --surface-secondary-foreground: oklch(21.03% 0.0015 55.34);
  --surface-tertiary: oklch(93.73% 0.0012 55.34);
  --surface-tertiary-foreground: oklch(21.03% 0.0015 55.34);
  --warning: oklch(78.19% 0.159 48.51);
  --warning-foreground: oklch(21.03% 0.0059 48.51);

  --radius: 0.5rem;
  --field-radius: 0.75rem;

  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

/* 
 * Accent: #BA977D
 * Generated from: https://heroui.com/themes?chroma=0.0556685368583262&hue=58.28270087624654&lightness=0.7018089416023037&fontFamily=geist
 */

.dark,
[data-theme="dark"] {
  color-scheme: dark;
  --accent: oklch(70.18% 0.0557 58.28);
  --accent-foreground: oklch(15% 0.0111 58.28);
  --background: oklch(12% 0.0015 58.28);
  --border: oklch(28% 0.0015 58.28);
  --danger: oklch(59.4% 0.1973 1.16);
  --danger-foreground: oklch(99.11% 0 0);
  --default: oklch(27.4% 0.0015 58.28);
  --default-foreground: oklch(99.11% 0 0);
  --field-background: oklch(21.03% 0.003 58.28);
  --field-foreground: oklch(99.11% 0.0015 58.28);
  --field-placeholder: oklch(70.5% 0.003 58.28);
  --focus: oklch(70.18% 0.0557 58.28);
  --foreground: oklch(99.11% 0.0015 58.28);
  --muted: oklch(70.5% 0.003 58.28);
  --overlay: oklch(21.03% 0.003 58.28);
  --overlay-foreground: oklch(99.11% 0.0015 58.28);
  --scrollbar: oklch(70.5% 0.0015 58.28);
  --segment: oklch(39.64% 0.0015 58.28);
  --segment-foreground: oklch(99.11% 0.0015 58.28);
  --separator: oklch(25% 0.0015 58.28);
  --success: oklch(73.29% 0.1941 127.34);
  --success-foreground: oklch(21.03% 0.0059 127.34);
  --surface: oklch(21.03% 0.003 58.28);
  --surface-foreground: oklch(99.11% 0.0015 58.28);
  --surface-secondary: oklch(25.7% 0.0023 58.28);
  --surface-secondary-foreground: oklch(99.11% 0.0015 58.28);
  --surface-tertiary: oklch(27.21% 0.0023 58.28);
  --surface-tertiary-foreground: oklch(99.11% 0.0015 58.28);
  --warning: oklch(82.03% 0.1392 52.87);
  --warning-foreground: oklch(21.03% 0.0059 52.87);
}

@layer base {
  body {
    @apply bg-background text-foreground;
  }

  ::selection {
    @apply bg-accent-soft;
  }
}

@layer components {
  .link {
    @apply decoration-accent hover:decoration-accent text-[length:inherit] decoration-1 hover:decoration-2;
  }
}

